slight fix to text "overflowing" slightly

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ li {
     font-size: 15px;
     text-align: justify;
     max-width: 90vw;
+    margin-right: 5vw;
 }
 
 
